class HireTransaction {

    constructor(startPoint) {
        this.startPoint = startPoint
        this.endPoint = undefined
        this.distanceTravelled = undefined
        this.paymentIncurred = undefined
        this.payedFor = false
    }

}