' To HireTransaction a scooter, a user must download the Electric Scooter HireTransaction app and register their details
' Only users 18 years and above can ride a scooter
' Scooters are rented from charging stations
' There are multiple charging stations in the city
' Only fully charged scooters can be rented
' A scooter must be returned to a charging station
' It takes 2 hours to fully charge a scooter from empty
' Payment is taken once the user has returned their scooter
' A scooter can be marked by a user as broken. This must remove the scooter from a list of available scooters and trigger maintenance personnel to repair the scooter
' The maximum range of a fully charged scooter is 32 km

' A UML Class diagram showing the system's classes, their attributes, methods and inter-relationships

@startuml
title Scooter - Class Diagram

class ChargingStation {
    Int location
    charge(scooterId)
    Int lockScooter(scooterId)
    Int unlockScooter(scooterId)
}

class Scooter {
    Int scooterId
    Int currentCharge
    Bool inWorkingCondition
    Bool locked
    Int location
    Int currentUserId

    Int getScooterId()
    Int getcurrentCharge()
    Int getCondition()
    Int getLocation()
    Int getCurrentUserId()

}

class Person {
    String name
}

class MaintenancePersonnel {
    Int employeeId
    fixScooter(scooterId)
}

class User {
    Array transactions
    Int userId
    Int age
    String creditCardDetails
    Int currentScooterId
    Bool userDataValid
    }

class RegisteredUser {
    requestScooter(scooterId)
    returnScooter()
    flagAsBroken()

}

class ScooterHireTransactionApp {
    inputAge(userId)
    inputCreditCardDetails(userId)
}

class HireTransaction {
    Int startPoint
    Int endPoint
    Int distanceTravelled
    Int paymentIncurred
    Bool payedFor

    Int getStartPoint()
    Int getendPoint()
    Int calculatePayment()
}

class ScooterHireBackendAPI {}

class ScooterHireDatabase {
    Object users
    Object scooters
    Object hireTransactions
}

Person <|-- User
Person <|-- MaintenancePersonnel
User <|-- RegisteredUser

RegisteredUser "1" --- "*" HireTransaction: makes
User "*" --- "1" ScooterHireTransactionApp: uses
HireTransaction "*" --- "1" Scooter: references
ChargingStation "*" --- "1" Scooter: charges

@enduml